[gd_scene load_steps=5 format=2]

[ext_resource path="res://ships/mooks/Mook.gd" type="Script" id=1]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://ships/mooks/gnat_surt_cc_sa_28x32.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.6302
height = 3.13086

[node name="Mook" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="sprite" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="sprite"]
texture = ExtResource( 3 )
vframes = 2

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( -0.263519, -0.263519 )
shape = SubResource( 1 )

[node name="reload_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ai_rethink_timer" type="Timer" parent="."]
wait_time = 4.0
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="ai_rethink_timer" to="." method="_on_ai_rethink_timer_timeout"]
